fix the css wrapping

--- a/assets/base.css
+++ b/assets/base.css
@@ -91,6 +91,7 @@ pre {
   font-family: 'Consolas','Liberation Mono',Courier,monospace; }
   pre code {
     display: block;
+    white-space: pre; /* no word wrap */
     padding: 10px;
     line-height: 1.7em; }
 
